crates/tmark-writers/tests/snapshots/fixtures__lint-structure@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
= Top <top>

=== Skipped <skipped>

#ts-lead[Note.] Promoted.

#figure(
  table(
    columns: 1,
    align: (left,),
    table.header([a]),
    [1],
  ),
  caption: [T.],
) <fig:t>

---requires---
{
  "packages": [],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
