crates/tmark-writers/tests/snapshots/fixtures__lists-adjacent@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<ul>
<li>a</li>
</ul>
<ul>
<li>b</li>
</ul>
<ol>
<li>c</li>
</ol>
<ol>
<li>d</li>
</ol>
<ul>
<li>e</li>
</ul>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
