crates/tmark-writers/tests/snapshots/fixtures__lists-adjacent@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{itemize}
\item a
\end{itemize}

\begin{itemize}
\item b
\end{itemize}

\begin{enumerate}
\item c
\end{enumerate}

\begin{enumerate}
\item d
\end{enumerate}

\begin{itemize}
\item e
\end{itemize}

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
