crates/tmark-writers/tests/snapshots/fixtures__lists-adjacent@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
- a

- b

+ c

+ d

- e

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
