crates/tmark-writers/tests/snapshots/fixtures__lists@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<ul>
<li><input type="checkbox" disabled /> open</li>
<li><input type="checkbox" disabled checked /> done with <span class="unresolved">[?sec:intro]</span></li>
<li>plain</li>
</ul>
<ol start="3">
<li>third</li>
<li>fourth</li>
</ol>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
