crates/tmark-writers/tests/snapshots/fixtures__lists@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{tstasklist}
\item[\tstodo] open
\item[\tsdone] done with [?sec:intro]
\item plain
\end{tstasklist}

\begin{enumerate}[start=3]
\item third
\item fourth
\end{enumerate}

---requires---
{
  "packages": [
    "amssymb",
    "enumitem",
    "pifont"
  ],
  "fragments": [
    "ts-todolist"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
