crates/tmark-writers/tests/snapshots/fixtures__lists@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
- #ts-task("open")[open]
- #ts-task("done")[done with \[?sec:intro\]]
- plain

3. third
4. fourth

---requires---
{
  "packages": [],
  "fragments": [
    "ts-todolist"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
