crates/tmark-writers/tests/snapshots/fixtures__math@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Inline <span class="math inline">\(a^2\)</span> and <span class="math inline">\(b^2\)</span>.</p>
<div class="math display">\[a^2 + b^2 = c^2\]</div>
<div id="eq:einstein" class="math display">\[e = mc^2\]</div>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
