crates/tmark-writers/tests/snapshots/fixtures__math@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Inline $a^2$ and $b^2$.

$$
a^2 + b^2 = c^2
$$

\begin{equation}\label{eq:einstein}
e = mc^2
\end{equation}

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
