crates/tmark-writers/tests/snapshots/fixtures__math@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Inline #mi(`a^2`) and #mi(`b^2`).

#mitex(`a^2 + b^2 = c^2`)

#mitex(`e = mc^2`) <eq:einstein>

---requires---
{
  "packages": [
    "@preview/mitex:0.2.6"
  ],
  "fragments": [
    "ts-equations"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
