crates/tmark-writers/tests/snapshots/fixtures__moustache@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Built with as but not \tscodeinline{\{\{ code \}\}}.

---requires---
{
  "packages": [],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
